--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
     <div class="for_border">
       <div class="input-container clearfix">
         <div class="for_sort">
-          <button class="srt srt1" id="srt" onclick="sortList()">
+          <button class="srt srt1" onclick="sortList()">
             <img src="./assets/Photos/sort.png" alt="">
+          </button>
+          <button class="srt srt2" onclick="sortList()">
+            <img src="./assets/Photos/sort2.png" alt="">
           </button>
         </div>
         <input type="text" id="task-name" />
